[gd_scene load_steps=31 format=2]

[ext_resource path="res://animations/jump.tres" type="Animation" id=1]
[ext_resource path="res://animations/idle.tres" type="Animation" id=2]
[ext_resource path="res://animations/run.tres" type="Animation" id=3]
[ext_resource path="res://animations/fall.tres" type="Animation" id=4]
[ext_resource path="res://scripts/body.gd" type="Script" id=5]
[ext_resource path="res://assets/players/hollis/hair.png" type="Texture" id=6]
[ext_resource path="res://assets/players/hollis/eyes.png" type="Texture" id=7]
[ext_resource path="res://assets/players/hollis/body.png" type="Texture" id=8]
[ext_resource path="res://assets/players/hollis/head.png" type="Texture" id=9]
[ext_resource path="res://assets/players/hollis/hair_back.png" type="Texture" id=10]
[ext_resource path="res://assets/players/hollis/sing_mouth.png" type="Texture" id=11]
[ext_resource path="res://assets/leg.png" type="Texture" id=12]
[ext_resource path="res://scripts/hollis.gd" type="Script" id=13]
[ext_resource path="res://assets/pixel.png" type="Texture" id=14]
[ext_resource path="res://assets/players/hollis/guitar.png" type="Texture" id=15]
[ext_resource path="res://assets/GlacialIndifference-Italic.otf" type="DynamicFontData" id=16]
[ext_resource path="res://assets/players/hand.png" type="Texture" id=17]
[ext_resource path="res://scenes/bars.tscn" type="PackedScene" id=18]
[ext_resource path="res://animations/die.tres" type="Animation" id=19]
[ext_resource path="res://assets/players/hollis/music.png" type="Texture" id=20]
[ext_resource path="res://assets/players/hollis/note.png" type="Texture" id=21]

[sub_resource type="CircleShape2D" id=1]
radius = 146.956

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 30.5641, 7.7917 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 39.5306 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_mipmaps = true
use_filter = true
font_data = ExtResource( 16 )

[sub_resource type="Animation" id=5]
resource_name = "attack"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21.3266, 9.69692 ), Vector2( -4.59199, -13.2875 ), Vector2( 26.2169, -5.46299 ), Vector2( 31.5962, 22.4117 ), Vector2( 21.3266, 9.69692 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -44.4012, 11.5778, 91.7127, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handR/weapon:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handR/weapon/Sprite:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 25.0312 ]
}

[sub_resource type="Animation" id=6]
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 38.6787, 11.7249 ), Vector2( 43.4483, -3.11395 ), Vector2( 38.6787, 11.7249 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 19.1318, 20.1381 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 26.3718, 8.01518 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 19.1318, 20.1381 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "stab"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 21.3266, 9.69692 ), Vector2( -15.3506, 17.5214 ), Vector2( 25.7279, 13.6092 ), Vector2( 9.58989, 20.4556 ), Vector2( 21.3266, 9.69692 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.4, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 44.4747, 61.2228, 61.033, 61.033, 44.4747 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handR/weapon:monitoring")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=9]
length = 7.0
tracks/0/type = "value"
tracks/0/path = NodePath("KinematicBody2D/Sprite/handL:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 19.1318, 20.1381 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("KinematicBody2D/Sprite/handL:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("KinematicBody2D/Sprite/handR:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.1, 1.3, 1.5, 1.8, 2.3, 2.5, 2.6, 2.9, 3.2, 3.5, 6.2, 6.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 34.3212, 9.60505 ), Vector2( 41.7407, 9.60505 ), Vector2( 31.9123, 9.60505 ), Vector2( 35.7522, 9.60505 ), Vector2( 41.0314, 10.135 ), Vector2( 33.9474, 10.6496 ), Vector2( 34.3212, 9.60505 ), Vector2( 41.7407, 9.60505 ), Vector2( 31.9123, 9.60505 ), Vector2( 35.7522, 9.60505 ), Vector2( 41.0314, 10.135 ), Vector2( 33.9474, 10.6496 ), Vector2( 34.3212, 9.60505 ), Vector2( 41.7407, 9.60505 ), Vector2( 41.7407, 9.60505 ), Vector2( 38.6787, 11.7249 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("KinematicBody2D/Sprite/handR:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 1, 1.1, 1.3, 6.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("KinematicBody2D/Sprite:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("KinematicBody2D/Sprite:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 6.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("KinematicBody2D/Sprite/legL:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -8.19322, 23.9495 ), Vector2( -7.1333, 23.9495 ), Vector2( -7.1333, 23.9495 ), Vector2( -8.19322, 23.9495 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("KinematicBody2D/Sprite/legL:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.3, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 4.15006, 0.0, 0.0, 4.15006 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("KinematicBody2D/Sprite/legR:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.3, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7.0291, 24.3478 ), Vector2( 6.49913, 24.3478 ), Vector2( 6.49913, 24.3478 ), Vector2( 7.0291, 24.3478 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("KinematicBody2D/Sprite/legR:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.3, 6.5, 7 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -6.51589, 0.0, 0.0, -6.51589 ]
}

[node name="hollis" type="Node2D"]
script = ExtResource( 13 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=[
"player",
]]
scale = Vector2( 0.9, 0.9 )
script = ExtResource( 5 )
Bars = ExtResource( 18 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]

[node name="body" type="Sprite" parent="KinematicBody2D/Sprite"]
position = Vector2( 0.464579, 4.8883 )
texture = ExtResource( 8 )

[node name="head" type="Sprite" parent="KinematicBody2D/Sprite"]
position = Vector2( -0.412223, -24.6726 )
z_index = 1
texture = ExtResource( 9 )

[node name="eyes" type="Sprite" parent="KinematicBody2D/Sprite/head"]
visible = false
texture = ExtResource( 7 )

[node name="hair" type="Sprite" parent="KinematicBody2D/Sprite/head"]
position = Vector2( -1.38509, 17.0632 )
scale = Vector2( 0.9, 1 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite/head/hair"]
z_index = -5
texture = ExtResource( 10 )

[node name="gun" type="Sprite" parent="KinematicBody2D/Sprite/head"]
visible = false
self_modulate = Color( 0.972549, 0.894118, 0.819608, 1 )
position = Vector2( 2.67718, 21.3268 )

[node name="beam" type="Area2D" parent="KinematicBody2D/Sprite/head/gun"]
position = Vector2( -8.56194, -26.6372 )
monitoring = false

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite/head/gun/beam"]
self_modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 4.51884, 23.4978 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 20 )

[node name="Sprite2" type="Sprite" parent="KinematicBody2D/Sprite/head/gun/beam"]
self_modulate = Color( 1, 1, 1, 0.639216 )
position = Vector2( 4.51884, 23.4978 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Sprite/head/gun/beam"]
visible = false
position = Vector2( 4.51881, 24.4016 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite/head/gun"]
self_modulate = Color( 0.972549, 0.894118, 0.819608, 1 )
position = Vector2( 0.166317, -0.582104 )
scale = Vector2( 15, 5.33158 )
texture = ExtResource( 14 )

[node name="mouth" type="Sprite" parent="KinematicBody2D/Sprite/head/gun"]
position = Vector2( 0.438782, -0.394583 )
texture = ExtResource( 11 )
offset = Vector2( -3.57249, -21.3315 )

[node name="handL" type="Sprite" parent="KinematicBody2D/Sprite"]
modulate = Color( 0.972549, 0.894118, 0.819608, 1 )
position = Vector2( -18.7074, 9.20673 )
scale = Vector2( 0.5, 0.5 )
z_index = 2
texture = ExtResource( 17 )

[node name="handR" type="Sprite" parent="KinematicBody2D/Sprite"]
modulate = Color( 0.972549, 0.894118, 0.819608, 1 )
self_modulate = Color( 0.972549, 0.87451, 0.690196, 1 )
position = Vector2( 21.3266, 9.69692 )
scale = Vector2( 0.5, 0.5 )
z_index = -3
texture = ExtResource( 17 )

[node name="weapon" type="Area2D" parent="KinematicBody2D/Sprite/handR"]
show_behind_parent = true
position = Vector2( -38.1904, -22.7409 )
scale = Vector2( 2.22222, 2.22222 )
monitoring = false

[node name="Sprite" type="Sprite" parent="KinematicBody2D/Sprite/handR/weapon"]
show_behind_parent = true
position = Vector2( 21.2952, 8.38509 )
rotation = 0.436877
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 15 )
offset = Vector2( 2.78225, -22.2975 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D/Sprite/handR/weapon"]
position = Vector2( 35.3995, -15.3025 )
rotation = -1.13229
shape = SubResource( 2 )

[node name="legL" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.105882, 0.105882, 0.105882, 1 )
position = Vector2( -8.19322, 23.9495 )
rotation = 0.0724322
scale = Vector2( 1.1, 1 )
z_index = -1
texture = ExtResource( 12 )

[node name="legR" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 0.105882, 0.105882, 0.105882, 1 )
position = Vector2( 7.0291, 24.3478 )
rotation = -0.113724
scale = Vector2( 1.1, 1 )
z_index = -2
texture = ExtResource( 12 )

[node name="gun" type="Sprite" parent="KinematicBody2D/Sprite"]
self_modulate = Color( 1, 1, 1, 0 )
texture = ExtResource( 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
position = Vector2( 0.819758, -4.55816 )
shape = SubResource( 3 )

[node name="Label" type="Label" parent="KinematicBody2D"]
margin_left = -101.318
margin_top = -73.7505
margin_right = 98.6824
margin_bottom = -50.7505
custom_fonts/font = SubResource( 4 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="note" type="Sprite" parent="KinematicBody2D"]
modulate = Color( 0.752941, 0.752941, 0.752941, 0 )
position = Vector2( 39.2505, -15.6337 )
texture = ExtResource( 21 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = ExtResource( 4 )
anims/idle = ExtResource( 2 )
anims/jump = ExtResource( 1 )
anims/run = ExtResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 5 )
anims/die = ExtResource( 19 )
anims/fire = SubResource( 6 )
anims/gun = SubResource( 7 )
anims/stab = SubResource( 8 )
anims/ult = SubResource( 9 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="UltTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true
[connection signal="body_entered" from="KinematicBody2D/Sprite/head/gun/beam" to="." method="_on_beam_body_entered"]
[connection signal="body_exited" from="KinematicBody2D/Sprite/head/gun/beam" to="." method="_on_beam_body_exited"]
[connection signal="body_entered" from="KinematicBody2D/Sprite/handR/weapon" to="KinematicBody2D" method="_on_weapon_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_AnimationPlayer2_animation_finished"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="UltTimer" to="." method="_on_UltTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="KinematicBody2D" method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
